# nyx

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
demo/: CMakeLists.txt  entry.h  main.cpp
doc/manual/: ABOUT.md
include/collision/: sphere_collider.h
include/core/: base.h
include/math/: base.h  math.h  quaternion.h  vec2.h  vec2_naive.h  vec2_sse4.h  vec3.h  vec3_naive.h  vec3_sse4.h
include/nyx/core/: base.h
include/nyx/math/: mat3.h  math.h  quaternion.h  quaternion_naive.h  vec2.h  vec2_sse4.h  vec3_sse4.h
include/nyx/physics/rigidbody/: rigidbody_system.h
include/nyx/physics/scene/: physics_world.h
include/physics/: physics_world.h  rigidbody_system.h  sphere_collider.h
include/rigidbody/: rigidbody.h  rigidbody_system.h  sphere_collider.h
source/: CMakeLists.txt
source/math/: CMakeLists.txt  vec2.cpp  vec3.cpp  vec3.h
source/nyx/: CMakeLists.txt
source/nyx/math/: CMakeLists.txt  vec2.cpp  vec3.cpp
source/nyx/physics/: CMakeLists.txt
source/nyx/physics/rigidbody/: CMakeLists.txt  rigidbody_system.cpp
source/nyx/scene/: CMakeLists.txt  physics_world.cpp
source/physics/: CMakeLists.txt  physics_world.cpp  rigidbody_system.cpp
source/rigidbody/: CMakeLists.txt  rigidbody.cpp  rigidbody_system.cpp
src/: CMakeLists.txt
src/Nbody/: nbody_cuda.cu  nbody_cuda.cuh
src/Rope/: Rope.cpp  Rope.h
src/Util/: Timestep.h  Vector.cpp  Vector.h
test/: CMakeLists.txt
test/math_accuracy/: CMakeLists.txt  main.cpp
test/physics_world_update/: CMakeLists.txt  main.cpp
test/rb_0/: CMakeLists.txt  main.cpp
